# qtrader

./: .coverage  .dockerignore  .env  .env.example  .env.production  .gitignore  AGENTS.md  CURRENT_STATUS_REPORT.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  Makefile  README.md  SYSTEM_INTEGRATION_PLAN.md  audit_output.md  code_cleaner.py  debug_ensemble.py  debug_feature.py  debug_multi.py  debug_single.py  docker-compose.yml  final_output.md  import_validator.py  imports.txt  integration_snippet.txt  live_trader.py  logging_rewriter.py  main.py  pyproject.toml  pytest_traceback.txt  pytest_traceback_v2.txt  test_alpha.py  test_drawdown_control.py  test_drift_detector.py  test_ensemble_strategy.py  test_feedback_final.py  test_integration.py  test_orchestrator_integration.py  (+15 more)
.agents/architecture/: event-flow.md  risk-flow.md
.agents/rules/: 01-project-reconnaissance.md  02-atomic-coding.md  03-tdd-pipeline.md  05-definition-of-done.md  07-commands-cheatsheet.md  README.md
.agents/workflows/: check-rust-core.md
.github/workflows/: microservices-ci.yml
.kilo/architecture/: data_lineage.md  failure_modes.md  invariants.md  latency_budget.md  risk_flow.md  state_ownership.md  system_architecture.md
.kilo/plans/: PRODUCTION_READY_PLAN.md  QTRADER_SYSTEM_EVOLUTION_PLAN.md  hft_optimizer_plan.md
.kilo/rules/: 01_project_reconnaissance.md  02_atomic_coding.md  03_tdd_pipeline.md  04_trading_constraints.md  06_edge_cases.md  08_quant_research_factors.md
.kilo/workflows/: check_rust_core.md  create_new_module.md  factor_investing.md  validate_dod.md
.opencode/: opencode.jsonc
analytics/: drift_detector.py
bot/: __init__.py  runner.py  state.py  win_rate_optimizer.py
configs/: bot_paper.yaml  bot_prod.yaml  env.example  execution.yaml  metrics_registry.yaml  precision_policy.yaml
configs/legacy/: alert_rules.yaml  bot_paper.yaml  config_schema.yaml  error_codes.yaml  escalation_rules.json  execution.yaml  failure_policy.yaml  latency_budget.yaml  logging_schema.json  precision_config.yaml  seed_config.yaml
core/: resource_monitor.py
data/events/: order_event_log.jsonl
docker-entrypoint-initdb.d/: 01_qtrader_schema.sql
docs/: ENGINES_ARCHITECTURE.md  FINAL_PROJECT_EVALUATION.md  add.md  analyst.md  async_architecture.md  audit_output.md  config_spec.md  decimal_migration_plan.md  deterministic_seed_spec.md  error_handling_spec.md  final_output.md  financial_formulas.md  implementation_report.md  institutional-gap-analysis.md  integration_master_plan.md  lifecycle_trace_spec.md  log_format_spec.md  precision_boundary_spec.md  prompt.md  qtrader_v4_audit.md  sanitization_analysis.md  standash-document.md  system-gap-analysis.md  trace_log_format.md  unified_pipeline_flow.md
docs/MODULE/: ALPHA.md  ANALYTICS.md  BACKTEST.md  COMPLIANCE.md  CORE.md  DATA.md  EXECUTION.md  FEATURES.md  GOVERNANCE.md  METRICS.md  ML.md  MODELS.md  MONITORING.md  OMS.md  PORTFOLIO.md  RESEARCH.md  RISK.md  SECURITY.md  STRATEGY.md
execution/: benchmark_orderbook.py
frontend/: Dockerfile  package-lock.json  package.json
hybrid_platform/: README.md
hybrid_platform/docs/: architecture.mmd
hybrid_platform/infra/: docker-compose.hybrid.yml
logs/: qtrader.json
microservices/: .env.example  README.md
microservices/docs/: architecture.mmd
microservices/infra/: docker-compose.yml
microservices/proto/: event_envelope.proto  order.proto
microservices/services/python/: pyproject.toml
microservices/services/python/alpha-feature/: Dockerfile  main.py
microservices/services/python/backtest-research/: main.py
microservices/services/python/execution-core/: Dockerfile  main.py
microservices/services/python/ml-inference/: main.py
microservices/services/python/risk-quant/: main.py
notebooks/: Analyst_Quickstart.ipynb  Colab_Quickstart.ipynb
notebooks/analyst/: 01_EDA_Report.ipynb  02_Backtest_Report.ipynb  03_Risk_Report.ipynb
notebooks/researcher/: 01_Feature_Lab.ipynb  02_Regime_Lab.ipynb  03_ML_Experiment.ipynb  qtrader.db.wal
pipeline/: deployment.py  monitor.py  research.py  session_bridge.py
qtrader/: live_pipeline.py  runner.py  trading_system.py
reports/: tearsheet_test_strat.html  tearsheet_test_strat.json
risk/: network_kill_switch.py
rust_core/: Cargo.toml
rust_core/src/: algo.rs  allocator.rs  event_store.rs  execution.rs  lib.rs  matching.rs  math.rs  microstructure.rs  models.rs  oms.rs  oms_engine.rs  persistence.rs  portfolio.rs  risk.rs  router.rs  simulator.rs  sizing.rs  stats.rs
rust_core/src/tests/: algo_tests.rs  execution_tests.rs  matching_tests.rs  math_tests.rs  mod.rs  ms_tests.rs  oms_tests.rs  portfolio_tests.rs  risk_tests.rs  simulator_tests.rs  sizing_tests.rs  stats_tests.rs
scratch/: reconcile_ruff.py  smoke_test_forensic.py  smoke_test_json.py  smoke_test_ml_pipeline.py  test_strip.py  verify_ml_parsing.py
scripts/: __init__.py  backtest_sample.py  brute_clean.py  db_audit_verify.py  execution_service.py  fix_syntax.py  format_code.py  generate_data.py  inject_ml_logic.py  live_engine.py  ml_service.py  ollama_setup.sh  orchestrator_service.py  reconcile_ruff.py  refactor_imports.py  reset_pass.py  strip_docs.py  verify_coinbase_v4.py  verify_v2_datalayer.py  verify_v3_institutional.py  verify_v3_quality.py  verify_v4_autonomous.py  verify_v4_stability.py
tests/: conftest.py  simple_feedback_test.py  test_analyst_session.py  test_binance_fills.py  test_broker_contracts.py  test_coinbase_live_rest_mock.py  test_core.py  test_drift_detector.py  test_duckdb_client.py  test_end_to_end_pipeline.py  test_ensemble_strategy.py  test_eventbus_runtime.py  test_l2_broker_sim.py  test_live_feedback_engine.py  test_market_state_updater.py  test_meta_learning_engine.py  test_mlflow_manager.py  test_mlflow_registry.py  test_network_kill_switch.py  test_orderbook_enhanced.py  test_pipeline_integration.py  test_resource_monitor.py  test_rust_simulator.py  test_shadow_engine.py  test_slippage_model.py  test_smoke_imports.py  test_sor_selection.py
(+1068 files in other folders)
