[project]
name = "qtrader"
version = "0.1.0"
description = "Internal framework for 2026 for trading system and algorithm"
authors = [
    { name = "Hoang Nam" }
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "polars>=1.0",
    "numpy>=2.0",
    "scipy>=1.13",
    "duckdb>=1.0",
    "PyJWT>=2.8.0",
    "catboost>=1.2",
    "xgboost>=2.1",
    "lightgbm>=4.4",
    "shap>=0.45",
    "mlflow>=2.14",
    "scikit-learn>=1.5",
    "hmmlearn>=0.3",
    "ray[tune]>=2.9",
    "torch>=2.2",
    "arcticdb>=3.0; (sys_platform != 'linux' or platform_machine != 'aarch64')",
    "asyncpg>=0.29",
    "aiohttp>=3.10",
    "uvloop>=0.20",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "opentelemetry-api>=1.25",
    "streamlit>=1.35",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "maturin>=1.6",
    "aioresponses>=0.7",
]
analyst = [
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.23",
    "pandas>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = ["COM812", "ISC001"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
