[package]
name = "qtrader_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "qtrader_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
polars = { version = "0.36", features = ["parquet", "lazy"] }
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
