[package]
name = "qtrader_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "qtrader_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
polars = { version = "0.36", features = ["parquet", "lazy"] }
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5"
rayon = "1.8"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
