[package]
name = "qtrader_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "qtrader_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26" }
numpy = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
rayon = "1.8"
chrono = "=0.4.39"
duckdb = { version = "0.10", features = ["bundled"] }
once_cell = "1.18"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
