[project]
name = "qtrader-hybrid-compute-plane"
version = "2.0.0"
description = "Institutional Compute Plane for QTrader Hybrid Platform"
dependencies = [
    "polars>=1.0.0",
    "numpy>=2.0.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
ignore_missing_imports = true
